<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".FormularioActivity">

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:hint="@string/txt_hint_nombre"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloFormulario"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtTituloFormulario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_formulario"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:hint="@string/txt_hint_apellido"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:hint="@string/txt_hint_telefono"
        android:inputType="phone"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnEnviarFormulario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="enviarDatosFormulario"
        android:text="@string/opcion_enviar_formulario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>