<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:clickable="true"
    android:focusable="false"
    tools:context=".CalcularEdadActivity">

    <EditText
        android:id="@+id/txtFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:backgroundTint="@android:color/background_light"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hint_edad"
        android:inputType="date"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textCursorDrawable="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloEdad" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:onClick="CalcularEdad"
        android:text="@string/opcion_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFecha" />

    <TextView
        android:id="@+id/txtTituloEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_calcular_edad"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

</androidx.constraintlayout.widget.ConstraintLayout>