<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".PresentacionActivity">

    <ImageView
        android:id="@+id/imgIntegrante2"
        android:layout_width="400px"
        android:layout_height="400px"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloPresentacion"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/camila"
        tools:srcCompat="@mipmap/Camila" />

    <ImageView
        android:id="@+id/imgIntegrante1"
        android:layout_width="400px"
        android:layout_height="400px"
        android:layout_marginStart="48dp"
        android:layout_marginTop="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgIntegrante3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgIntegrante2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/santiago"
        tools:srcCompat="@mipmap/Santiago" />

    <ImageView
        android:id="@+id/imgIntegrante3"
        android:layout_width="400px"
        android:layout_height="400px"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgIntegrante2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/antonio"
        tools:srcCompat="@mipmap/Antonio" />

    <TextView
        android:id="@+id/txtTituloPresentacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_presentacion"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <TextView
        android:id="@+id/txtNombre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nombre_integrante_1"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgIntegrante2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtNombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nombre_integrante_2"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgIntegrante1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtNombre3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nombre_integrante_3"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgIntegrante3"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>